création fichierabout.json et corrections majeurs collapse .jsx

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -1,6 +1,6 @@
 @import "../../sass/utils/variables.scss";
 
-.Collapse {
+
   .Collapse-section {
     background-color: $background-light;
     color: $color-primary;
@@ -79,4 +79,4 @@
 
     }
   }
-}
+
